@@ -28,6 +28,8 @@ exp6
 7。实现单目逻辑表达式
 8。完善控制流部分，逻辑表达式中的类型转换，左值转右值。实现短路计算
 9。目前20个测试样例全部通过
+10。修复之前pull request对于BlockStmt跳过编译的bug，如while(1){if(1)break; int a=1;}，错误地把break后面的跳过了
+11。修复同一函数内跳转标签同名问题
 
 
 
